--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -15,7 +15,7 @@
     The extragalactic sky appears quite different at different wavelengths. While an optical observer may look at a distant galaxy and see spirals and halos, an infrared observer will see discs and dust. What does the radio astronomer see? 
     \autoref{fig:gleam} shows a false-colour image of the radio sky from 72--231~MHz. The plane of the Milky Way is clearly visible through the centre, but nearly every other object in this image is a galaxy. These galaxies fall into two main categories: those that emit radio due to star formation (called \defn{star-forming galaxies}), and those that emit radio due to \defn{active galactic nuclei} (AGN; called \defn{radio galaxies} in this thesis). AGN can be observed at many frequencies: for the remainder of this thesis, except where otherwise noted, `AGN' refers to \emph{radio} `AGN'.
 
-    Non-AGN emission from distant galaxies traces the recent star-formation rate (SFR). Besides low-power thermal emission, stellar radio emission from galaxies mainly comes from massive ($\gtrapprox 8$ M$_\odot$) stars, through two emission mechanisms. The first is through H~II regions, which are ionised by such stars. The ionised electrons emit bremsstrahlung radiation at radio wavelengths. The second emission mechanism is supernovae. Massive stars may end their lives in Type II and Type Ib supernovae, which can result in supernova remnants. These remnants emit synchrotron radiation. Massive stars like these are short-lived (a few $10^6$ yr), and the corresponding emitting electrons have similarly short lifetimes ($\lessapprox 10^8$ yr). The radio effects of these stars are therefore also short-lived, which is why radio emission traces the recent SFR \citep{condon92radio}. Star formation-associated emission is mainly found in the disc of spiral galaxies, as this is where the star formation rate is highest. In particular, there is no star-forming radio emission extending outside of the galaxy proper. The radio power emitted by these galaxies at 1.4~GHz is on the order of $10^{18}$--$10^{23}$~W~Hz$^{-1}$ \citep{condon92radio}. For a radio survey like the NRAO VLA Sky Survey \citep[NVSS;][]{condon98nvss}, with a detection limit of 2.3~mJy, this luminosity range corresponds to a maximum redshift range of $0.0004$--$0.1272$. Upcoming surveys such as the Evolutionary Map of the Universe \citep[EMU;][]{norris11}, with 5$\sigma$ detection thresholds of 50~$\upmu${}Jy \citep{norris_emu_2011}, will push this range to $0.0030$--$0.6684$.
+    Non-AGN emission from distant galaxies traces the recent star-formation rate (SFR). Besides low-power thermal emission, stellar radio emission from galaxies mainly comes from massive ($\gtrapprox 8$ M$_\odot$) stars, through two emission mechanisms. The first is through H~II regions, which are ionised by such stars. The ionised electrons emit bremsstrahlung radiation at radio wavelengths. The second emission mechanism is supernovae. Massive stars may end their lives in Type II and Type Ib supernovae, which can result in supernova remnants. These remnants emit synchrotron radiation. Massive stars like these are short-lived (a few $10^6$ yr), and the corresponding emitting electrons have similarly short lifetimes ($\lessapprox 10^8$ yr). The radio effects of these stars are therefore also short-lived, which is why radio emission traces the recent SFR \citep{condon92radio}. Star formation-associated emission is mainly found in the disc of spiral galaxies, as this is where the star formation rate is highest. In particular, there is no star-forming radio emission extending outside of the galaxy proper. The radio power emitted by these galaxies at 1.4~GHz is on the order of $10^{18}$--$10^{23}$~W~Hz$^{-1}$ \citep{condon92radio}. For a radio survey like the NRAO VLA Sky Survey \citep[NVSS;][]{condon98nvss}, with a detection limit of 2.3~mJy, this luminosity range corresponds to a maximum redshift range of $0.0004$--$0.1272$ (corresponding to $6\times10^6$--$1.646\times10^9$ yr lookback time\footnote{Assuming cosmological parameters from \autoref{cha:rlfs}. Calculated using \citetitle{wright2006ned} \citep{wright2006ned}.}). Upcoming surveys such as the Evolutionary Map of the Universe \citep[EMU;][]{norris11}, with 5$\sigma$ detection thresholds of 50~$\upmu${}Jy \citep{norris_emu_2011}, will push this redshift range to $0.0030$--$0.6684$ (corresponding to $4.2\times10^7$--$6.261\times10^9$ yr lookback time).
 
     AGN are energetic objects at the centre of galaxies, powered by accretion into supermassive black holes. The extended, strongly-magnetised plasma they eject emits synchrotron radiation from accelerating relativistic electrons, which is what we see when we observe a radio galaxy. The radio luminosity of a radio galaxy can range from $10^{20}$--$10^{28}$ W~Hz$^{-1}$ \citep{pracy16rlf} at 1.4~GHz, making them some of the most luminous objects in the Universe. They are therefore visible throughout the Universe, with the most distant AGN detected at a redshift of 7.5 \citep{banados_800-million-solar-mass_2018}. Depending on the orientation and type of AGN, as well as its interaction with its host galaxy, the radio emission may extend far beyond the galaxy itself---up to megaparsec scales---and this emission may have complex structure. Perhaps the most impressive local example is Centaurus A (Cen A), the prominent double-lobed cloud in the upper-right of \autoref{fig:gleam} extending over 8 degrees across the sky. \autoref{sec:agn} discusses AGN in more detail.
 
@@ -38,7 +38,7 @@
             \label{eq:spectral-index}
             S(\nu) \propto \nu^{\alpha}.
         \end{equation}
-        $\alpha$ is called the \defn{spectral index}\footnote{Note that the sign of $\alpha$ varies by convention, and both $S \propto \nu^{\alpha}$ and $S \propto \nu^{-\alpha}$ exist in the literature.}. It is related to the energy distribution of the emitting electrons: assuming that the electron energy distribution follows a power law \citep[which it generally does,][]{rybicki_radiative_2008}, where the number density of electrons at a given energy $E$ is given by
+        where $\nu$ is the frequency of radiation and $\alpha$ is called the \defn{spectral index}\footnote{Note that the sign of $\alpha$ varies by convention, and both $S \propto \nu^{\alpha}$ and $S \propto \nu^{-\alpha}$ exist in the literature.}. It is related to the energy distribution of the emitting electrons: assuming that the electron energy distribution follows a power law \citep[which it generally does,][]{rybicki_radiative_2008}, where the number density of electrons at a given energy $E$ is given by
         \begin{equation}
             n(E) \propto E^\Gamma,
         \end{equation}
@@ -265,14 +265,14 @@
             \caption{\label{fig:mauch-rlf} RLF for star-forming galaxies and AGN, from \citet{mauch07rlf}.}
         \end{figure}
 
-        The distribution of AGN luminosities throughout the Universe can be characterised by the \defn{radio luminosity function} (RLF). This describes the density of AGN within luminosity bins at a given frequency. The RLF at 1.4~GHz from \citet{mauch07rlf} is shown in \autoref{fig:mauch-rlf}. 1.4~GHz is arguably the most common large-scale survey frequency as it detects the 21~cm hydrogen line, but this RLF can be scaled to different frequencies by assuming a constant spectral index ($\alpha = -0.7$ for a typical AGN). In \autoref{cha:rlfs}, we will use a machine learning-derived radio source catalogue to estimate a RLF for extended radio objects.
+        The distribution of AGN luminosities throughout the Universe can be characterised by the \defn{radio luminosity function} (RLF). This describes the density of AGN within luminosity bins at a given frequency. The RLF at 1.4~GHz from \citet{mauch07rlf} is shown in \autoref{fig:mauch-rlf}. 1.4~GHz is arguably the most common large-scale survey frequency as it detects the easily observed 21~cm hydrogen line, but this RLF can be scaled to different frequencies by assuming a constant spectral index ($\alpha = -0.7$ for a typical AGN). In \autoref{cha:rlfs}, we will use a machine learning-derived radio source catalogue to estimate a RLF for extended radio objects.
 
     \subsection{The role of AGN}
     \label{sec:role-of-agn}
 
         AGN are an important part of galaxy evolution, though the exact mechanisms of this are not currently known. Understanding galaxy evolution requires understanding the links between it and AGN, and thus requires the study of AGN.
 
-        There are established relationships between AGN parameters and galaxy parameters: the mass of the central black hole is correlated with the stellar mass and velocity dispersion near the core in elliptical galaxies \citep{cattaneo_role_2009} as well as the luminosity of the bulge \citep{kormendy_inward_1995}. Massive galaxies seem to be more likely to contain an AGN rather than an inactive galactic nucleus \citep{hardcastle20feedback}. The large-scale behaviour of AGN (e.g. the Fanaroff-Riley divide) may be caused by within-host galaxy interactions \citep{hardcastle20feedback} and this interaction would be a significant energy contribution to the interstellar medium.
+        There are established relationships between AGN parameters and galaxy parameters: the mass of the central black hole is correlated with the stellar mass and velocity dispersion near the core in elliptical galaxies \citep{cattaneo_role_2009} as well as the luminosity of the bulge \citep{kormendy_inward_1995}. Massive galaxies seem to be more likely to contain an AGN rather than an inactive galactic nucleus \citep{hardcastle20feedback}. The large-scale behaviour of AGN (e.g. the Fanaroff-Riley divide) may be caused by interactions within the host galaxy \citep{hardcastle20feedback} and this interaction would be a significant energy contribution to the interstellar medium.
 
         Perhaps the biggest topic in this field is that of \defn{AGN feedback}, the role of AGN in the enhancement or quenching of star formation within their host galaxies. Star formation requires cold gas; AGN can push gas out of the galaxy \citep{zubovas_clearing_2012} or heat it so that it can no longer form stars. But the rapid expansion of AGN jets can produce shocks in the local environment, compressing gas, triggering collapse of gas clouds, and potentially increasing the star formation rate \citep{zubovas_collapse_2014}.
 
@@ -356,7 +356,7 @@
             \centering
             \begin{subfigure}{0.45\textwidth}
                 \includegraphics[width=\textwidth]{images/CSIRO-Parkes-Wiradjuri-naming-Murriyang.jpg}
-                \caption{The 64m telescope (Murriyang) \linebreak at Parkes Observatory}
+                \caption{\raggedright The 64m telescope (Murriyang) at Parkes Observatory}
                 \label{fig:murriyang}
             \end{subfigure}
             \begin{subfigure}{0.45\textwidth}
@@ -387,7 +387,7 @@
                 \caption{NVSS}
                 \label{fig:im-contours-nvss}
             \end{subfigure}
-            \caption[An example of a `resolved out' radio galaxy.]{\label{fig:resolved-out} A fairly diffuse FRII, J0016+0420, observed with the VLA in the (a) FIRST \citep{becker95first} and (b) NVSS\citep{condon98nvss} surveys. \citep[GRG1 from ][]{dabhade_discovery_2017}}
+            \caption[An example of a `resolved out' radio galaxy.]{\label{fig:resolved-out} A fairly diffuse FRII, J0016+0420, observed with the VLA in the (a) FIRST \citep{becker95first} and (b) NVSS \citep{condon98nvss} surveys. \citep[GRG1 from ][]{dabhade_discovery_2017}}
         \end{figure}
 
     \subsection{Methods of aggregation}
@@ -399,6 +399,11 @@
 
         Any method for cross-identification of components can also be used to aggregate components. Cross-identify all components with their host galaxies, then components that share a host are almost always part of the same radio source. It is this approach we will later take to aggregating sources in \autoref{cha:rlfs}. There is no obvious inverse algorithm (to go from aggregate sources to cross-identifications) although some algorithms attempt to solve both problems simultaneously \citep{fan_optimal_2020,fan15}.
 
+
+\section{Summary: radio sources}
+\label{sec:summary-radio}
+    
+    The radio sky is vibrant and exciting, and current and new wide-area radio surveys are opening up new avenues of exploring this space. In this chapter we introduced radio sources that you might see in the radio sky, including the often-extended AGN. We discussed their radio emission and emission mechanisms, and described some aspects of their morphology and structure. We also looked at ways that radio sources can be classified, aggregated, and cross-identified with their counterparts at other wavelengths. In the next chapter, we will introduce machine learning concepts that we will use to develop methods for exploiting the vast amount of data radio telescopes provide on radio sources.
 
     % \begin{itemize}
     %     \item machine learning in astronomy and radio astronomy (literature review)
