--- a/thesis/listofconstants.tex
+++ b/thesis/listofconstants.tex
@@ -51,5 +51,6 @@ The following list summarises abbreviations that are commonly used in this thesi
     \item SNR: signal-to-noise ratio, the ratio of total intensity to noise level
     \item SWIRE: \emph{Spitzer} Wide-area Infrared Extragalactic Survey, a deep infrared survey
     \item VLA: Very Large Array, a radio telescope in New Mexico
+    \item \emph{WISE}: \emph{Wide-field Infrared Survey Explorer}, a space-based infrared telescope
     \item XGB: extreme gradient boosted trees, a classification model
 \end{itemize}
