--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -207,6 +207,7 @@
 \renewcommand{\chapterautorefname}{Chapter}%
 \renewcommand{\sectionautorefname}{Section}%
 \renewcommand{\subsectionautorefname}{Section}%
+\renewcommand{\algorithmautorefname}{Algorithm}%
 \renewcommand{\subsubsectionautorefname}{Section}%
 
 
