--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -11201,6 +11201,25 @@ year = {2019}
           identificat.pdf:application/pdf}
 }
 
+@ARTICLE{wright2006ned,
+       author = {{Wright}, E.~L.},
+        title = {A Cosmology Calculator for the World Wide Web},
+      journal = {\pasp},
+         year = 2006,
+        month = dec,
+       volume = {118},
+       number = {850},
+        pages = {1711-1715},
+          doi = {10.1086/510102},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0609593},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006PASP..118.1711W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @Article{     wright10wise,
   author    = {{Wright}, E.~L. and {Eisenhardt}, P.~R.~M. and {Mainzer},
           A.~K. and {Ressler}, M.~E. and {Cutri}, R.~M. and
