--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -8,7 +8,7 @@ Much of this work was done in my office at Mount Stromlo while I bothered my off
 
 Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters. I must also thank those who provided me funding over this PhD: the Australian Government, the Research School of Astronomy and Astrophysics, Data61/CSIRO, and the Astronomical Society of Australia.
 
-A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, Jack Livingston, and Eloise Birchall.
+A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, Jack Livingston, Eloise Birchall, and Adam Rains.
 
 Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, Bronnagh Norris, and Jakub Nabaglo; for their emotional support through my PhD.
 
